@@ -1,5 +1,8 @@
 /* vim: set noexpandtab shiftwidth=2 softtabstop=2 tw=70: */
+
 //#define DEBUG
+//#define DEBUG_INTERP
+
 #include <R.h>
 #include <Rdefines.h>
 #include <Rinternals.h>
@@ -22,6 +25,106 @@
    lines(TT,zz,col='blue')
 
 */
+
+//
+
+// x is a point, while xx and yy are arrays of length 4.
+static double interp(double *xoutp, double *xp, double *yp, int i, int j, int ok[4])
+{
+  // Handle case without 4 neighbors.  It's not clear from the NODC
+  // documents just how to do this, in the case where there are under
+  // three local points
+  double x = xoutp[i]; 
+  double xx[4], yy[4];
+  int ngood = 0;
+  for (int n = 0; n < 4; n++) {
+    xx[n] = yy[n] = 999.0;
+    if (ok[n]) {
+      xx[ngood] = xp[j + n - 1];
+      yy[ngood] = yp[j + n - 1];
+      ngood++;
+    }
+  }
+#ifdef DEBUG_INTERP
+  Rprintf("# ngood: %d\n", ngood);
+#endif
+  if (ngood < 2)
+    return(NA_REAL);
+  // Below is standard lagrangian interpolation.  FIXME: should
+  // check that den != 0;
+  double y = 0.0;
+  for (int l = 0; l < ngood; l++) {
+    double num = 1.0, den = 1.0;
+    for (int m = 0; m < ngood; m++) {
+      if (m != l) {
+	num *= x - xx[m];
+	den *= xx[l] - xx[m];
+      }
+    }
+    y += yy[l] * num / den;
+  }
+#ifdef DEBUG_INTERP
+  Rprintf("library(polynom)\n");
+  Rprintf("x<-%.6f; y<-%.6f; xx<-c(%.6f,%.6f,%.6f,%.6f); yy<-c(%.6f,%.6f,%.6f,%.6f); xx<-xx[xx!=999]; yy<-yy[yy!=999]; plot(xx,yy, type='o');points(x,y,col='red')\n",
+      x, y,
+      xx[0], xx[1], xx[2], xx[3],
+      yy[0], yy[1], yy[2], yy[3]);
+  Rprintf("y - predict(poly.calc(xx, yy), x)\n");
+#endif
+  return(y);
+}
+
+// returns pointer to int array telling if values are in fence
+int fok[4];
+void fence(double *xoutp, double *xp, int i, int j, int x_len)
+{
+  if (j < 1 || j >= (x_len - 2)) {
+    for (int i = 0; i < 4; i++)
+      fok[i] = 0;
+  } else {
+    double xout = xoutp[i];
+    // af=above-far, an=above-near, bn=below-near, bf=below-far
+    double xaf = xp[j-1], xan = xp[j], xbn = xp[j+1], xbf = xp[j+2];
+    // Inner neighbors must be within
+    //   5m for data above 10m
+    //   50m above 250m
+    //   100m above 900m
+    //   200m above 2000m
+    //   1000m otherwise.
+    if (xout < 10) {
+      fok[0] = fabs(xout - xan) < 5;
+      fok[1] = fabs(xout - xbn) < 5;
+    } else if (xout < 250) {
+      fok[0] = fabs(xout - xan) < 50;
+      fok[1] = fabs(xout - xbn) < 50;
+    } else if (xout < 900) {
+      fok[0] = fabs(xout - xan) < 100;
+      fok[1] = fabs(xout - xbn) < 100;
+      //if (i == 48) Rprintf("xan:%.1f (%.1f) xbn:%.1f\n %.1f (0) %.1f\nfok[0]:%d fok[1]:%d\n", xan, xout, xbn, fabs(xout - xan), fabs(xout - xbn), fok[0], fok[1]);
+    } else if (xout < 2000) {
+      fok[0] = fabs(xout - xan) < 200;
+      fok[1] = fabs(xout - xbn) < 200;
+    } else {
+      fok[0] = fabs(xout - xan) < 1000;
+      fok[1] = fabs(xout - xbn) < 1000;
+    }
+    // Outer neighbors must be within
+    //   200m above 500m
+    //   400m above 1300m
+    //   1000m otherwise
+    if (xout < 500) {
+      fok[2] = fabs(xout - xan) < 200;
+      fok[3] = fabs(xout - xbn) < 200;
+      //if (i == 48) Rprintf("xan:%.1f (%.1f) xbn:%.1f\n %.1f (0) %.1f\nfok[2]:%d fok[3]:%d\n", xaf, xout, xbf, fabs(xout - xaf), fabs(xout - xbf), fok[2], fok[3]);
+    } else if (xout < 130) {
+      fok[2] = fabs(xout - xan) < 400;
+      fok[3] = fabs(xout - xbn) < 400;
+    } else {
+      fok[2] = fabs(xout - xan) < 1000;
+      fok[3] = fabs(xout - xbn) < 1000;
+    }
+  }
+} 
 
 int between(double x, double x0, double x1)
 {
@@ -141,6 +244,8 @@ SEXP oce_approx(SEXP x, SEXP y, SEXP xout, SEXP method) // , SEXP n, SEXP m)
   PROTECT(xout = AS_NUMERIC(xout));
   PROTECT(method = AS_NUMERIC(method));
   const int Method = (int)floor(0.5 + *REAL(method));
+  if (Method != 1 && Method != 2)
+    error("method must be 'nodc' or 'rr'");
   if (x_len != y_len) error("lengths of x (%d) and y (%d) disagree", x_len, y_len);
   xp = REAL(x);
   xoutp = REAL(xout);
@@ -161,9 +266,11 @@ SEXP oce_approx(SEXP x, SEXP y, SEXP xout, SEXP method) // , SEXP n, SEXP m)
     if (Method == 1 && (xoutp[i] <= xp[0] && xp[0] <= 5)) {
       val = yp[0];
       found = 1;
-      Rprintf("xoutp[%d]=%f is above 5m, setting to xp[0]=%f\n", i, xoutp[i], val);
+#ifdef DEBUG_INTERPOLATION
+      Rprintf("# xoutp[%d]=%.1f is above 5m, setting to xp[0]=%.1f\n", i, xoutp[i], val);
+#endif
     } else {
-      // Handle region below 5m
+      // Handle region below 5m, by finding j such that xp[j] <= xout[i] <= xp[j+1]
       for (int j = 0; j < x_len - 1; j++) {
 	//#ifdef DEBUG
 	//Rprintf("x[%d]=%.1f\n", j, *(xp + j));
@@ -195,13 +302,30 @@ SEXP oce_approx(SEXP x, SEXP y, SEXP xout, SEXP method) // , SEXP n, SEXP m)
 	      //val = NA_REAL;
 	      val = yp[x_len - 1]; // trim to endpoint
 	    } else {
+	      //if (j > 2 && j < (xout_len - 2)) {
+	      //  Rprintf("xout[i=%d]:%.1f, xp[j-1]:%.1f xp[j=%d]:%.1f | xp[j+1]:%.1f xp[j+2]:%.1f\n",
+	      //      i, xoutp[i], xp[j-1], j, xp[j], xp[j+1], xp[j+2]);
+	      //}
 	      val = phi_z(j, xx, xp, yp, x_len);
 	      if (Method == 1) {
+		fence(xoutp, xp, i, j, x_len);
+		if (4 == fok[0] + fok[1] + fok[2] + fok[3]) {
+		  ;
+		} else {
+#ifdef DEBUG_INTERP
+		  Rprintf("# using 3-point lagrangian interpolation at i:%d, fok: %d %d %d %d\n", i, fok[0], fok[1], fok[2], fok[3]);
+#endif
+
+		  val = interp(xoutp, xp, yp, i, j, fok);
+		}
 		//Rprintf("xoutp[%d]:%.1f, j:%d, val:%.1f, xp[j-1]:%.1f, xp[j]:%.1f, xp[j+1]:%.1f, yp[j]:%.1f, yp[j+1]:%.1f\n",
 		//    i, xoutp[i], j, val, xp[j-1], xp[j], xp[j+1], yp[j], yp[j+1]);
 		if (!between(val, yp[j], yp[j+1])) {
 		  val = yp[j] + (xoutp[i] - xp[j]) * (yp[j+1] - yp[j]) / (xp[j+1] - xp[j]);
-		  Rprintf(" using linear interp to get %.1f, since not bounded by %.1f and %.1f\n", val, yp[j], yp[j+1]);
+#ifdef DEBUG_INTERP
+		  Rprintf("# using linear interp at xout[%d]=%.1f since %.1f is not bounded by %.1f and %.1f\n",
+		      i, xoutp[i], val, yp[j], yp[j+1]);
+#endif
 		}
 	      }
 	    }
@@ -216,7 +340,6 @@ SEXP oce_approx(SEXP x, SEXP y, SEXP xout, SEXP method) // , SEXP n, SEXP m)
     }
     ansp[i] = found?val:NA_REAL;
   }
-  Rprintf("AT END, first few values %f %f %f ...\n", ansp[0], ansp[1], ansp[2]);
   UNPROTECT(5);
   return(ans);
 }
