@@ -1,4 +1,6 @@
 0.9-13
+- ctdDecimate() handles new method 'unesco'
+- coastline improvements (now 3 resolutions)
 - webtide() improvements
 - read.observatory() added
 - read.ctd.itp() added
@@ -333,7 +335,7 @@
 - plot.tidem(): remove argument 'plot.type', using 'which' instead
 - read.pt(): add arguments from, by, and to
 - fix issue 57 [read.adp.rdi() read the heading incorrectly]
-- add "reiniger-ross" method to ctd.decimate()
+- add "rr" method to ctdDecimate()
 - oceApprox() added
 - topoWorld dataset added
 - plot.ctd(): by default, make coastlines extend to box boundaries
